<resources>
    <string name="app_name">BLVCK Player</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="cool">Cool</string>
    <string name="delete">Delete</string>
    <string name="star_boy_ft_daft_punk">Star Boy ft. Daft Punk</string>
    <string name="the_weekend">The Weekend</string>
    <string name="_1_20">1:20</string>
    <string name="_4_09">4:09</string>
    <string name="now_playing">Now Playing</string>
    <string name="album">Album</string>
    <string name="file_name">File name</string>
    <string name="file_name_music_item">File name music item</string>
    <string name="pref_key">myPref</string>
    <string name="path">path</string>
</resources>
